<resources>
    <string name="app_name">NotesApp</string>
    <string name="day_of_week">День недели</string>
    <string name="title">заглавие заметки</string>
    <string name="desciption">описание заметки</string>
    <string name="save_button">Добавить заметку</string>
    <string name="pririoty_1">Очень срочно</string>
    <string name="pririoty_2">Срочно</string>
    <string name="pririoty_3">Важно</string>
    <string name="warning_fill_fields">Все поля должны заполнены</string>

    <string-array name="day_of_week">
        <item>Понедельник</item>
        <item>Вторник</item>
        <item>Среда</item>
        <item>Четверг</item>
        <item>Пятница</item>
        <item>Суббота</item>
        <item>Воскресенье</item>
    </string-array>
</resources>
