<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNoteActivity">

    <EditText
        android:id="@+id/title_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/description_editText"
        android:layout_width="0dp"
        android:hint="@string/desciption"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_edit_text" />

    <Spinner
        android:id="@+id/spinner_days_of_week"
        android:layout_width="match_parent"
        android:layout_marginTop="12dp"
        android:entries="@array/day_of_week"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_editText" />

    <RadioGroup
        android:id="@+id/radio_group_priority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_days_of_week">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="143dp"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_purple"
            android:text="@string/pririoty_1" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="109dp"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_light"
            android:text="@string/pririoty_2" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_green_light"
            android:checked="true"
            android:text="@string/pririoty_3" />
    </RadioGroup>

    <Button
        android:id="@+id/add_note_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/save_button"
        android:textStyle="bold"
        android:onClick="onClickAddNoteSave"
        android:textColor="@android:color/white"
        style="@style/Widget.AppCompat.Button.Colored"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radio_group_priority" />



</androidx.constraintlayout.widget.ConstraintLayout>